k8s/network/day-7/00-network-lab-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: network-lab
  labels:
    purpose: network-testing
