k8s/network/day-7/01-network-clients.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-allowed
  namespace: network-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-client
      access: allowed
  template:
    metadata:
      labels:
        app: network-client
        access: allowed
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: network-client
        image: busybox:1.36.1
        imagePullPolicy: IfNotPresent
        command:
          - /bin/sh
          - -c
          - sleep 3600
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities: 
            drop:
              - ALL
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-denied
  namespace: network-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-client
      access: denied
  template:
    metadata:
      labels:
        app: network-client
        acess: denied
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: network-client
        image: busybox:1.36.1
        imagePullPolicy: IfNotPresent
        command:
          - /bin/sh
          - -c
          - sleep 3600
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities: 
            drop:
              - ALL
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
